# minnal

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mvcc-lsn-design.md
.github/actions/setup-compiler/: action.yml
.github/actions/setup-postgres/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: CapnProto.cmake  IPO.cmake  Postgres.cmake  Sanitizers.cmake  Warnings.cmake
docs/: commit_lsn_based_mvcc.md  engineering_plan_v1.md  ext_engine_rpc_methods.md
engine/: CMakeLists.txt  RPC.md  vector_patch_overlay.md
engine/include/: minnal.hpp
engine/src/: main.cpp
extension/: CMakeLists.txt  minnal--0.1.0.sql  minnal.control
extension/regress/: test_schedule
extension/regress/expected/: minnal_version.out
extension/regress/sql/: minnal_version.sql
extension/src/: pg_minnal.cpp
scripts/: ci-coverage.sh  ci-linux.sh  ci-macos.sh  ci-sanitizers.sh  ci-static-analysis.sh
scripts/lib/: ci-common.sh
